src/objects/Media__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_No__c</fullName>
        <label>Credit Card No</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ISBN_Number__c</fullName>
        <label>ISBN Number</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>